traces/bug_716.txt
src/femlib/Mesh3dn.cpp:1230: error: DEAD_STORE
  The value written to &nomove (type _Bool) is never used.
Showing all 1 steps of the trace


src/femlib/Mesh3dn.cpp:1230:9: Write of unused value
1228.           bool ddd=verbosity>2000;
1229.           bool ddd9=verbosity>9;
1230.           bool nomove=true;
                ^
1231.           R lambda[4],dl[4],cl[4];
1232.           Phat.toBary(lambda);
